# django_skills

./: db.sqlite3  pyproject.toml
django_skills/: settings.py  urls.py
features/: admin.py  models.py  urls.py  views.py
